objects/SharedQuota__c.object
<CustomObject>
    <description>SFDC-4930 Share managers quota outside of quota hierarchy</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SFDC-4930 flag to mark sharing record as valid and active</description>
        <inlineHelpText>Only active records will be considered for quota sharing.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShareWithUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who will be able to see the additional quota and actual records</description>
        <label>Share with User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SharedQuotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserQuota</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Shared Quota</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SQ-{000}</displayFormat>
        <label>Shared Quota</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shared Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>UniqueSharingUser</fullName>
        <active>true</active>
        <description>Share with user and user cannot be same for a Shared Quota record</description>
        <errorConditionFormula>User__c = ShareWithUser__c</errorConditionFormula>
        <errorMessage>User and Share with User cannot be the same</errorMessage>
    </validationRules>
</CustomObject>